*SVN*

* Added :as option to sudo, so you can specify who the command is executed as [Mark Imbriaco]

*1.2.0* (September 14, 2006)

* Add experimental 'shell' task [Jamis Buck]

* Display file for external configurations, rather than inspected proc. [Jamis Buck]

* Connect to multiple servers in parallel, rather than serially. [Jamis Buck]

* Add SCM module for Mercurial (closes #4150) [Matthew Elder]

* Remove unused line in SCM::Base (closes #5619) [chris@seagul.co.uk]

* More efficient "svn log" usage (closes #5620) [Anatol Pomozov]

* Better support for key passphrases in the SVN module (closes #5920) [llasram@gmail.com]

* Fix missing default for :local in cvs.rb (closes #3645) [jeremy@hinegardner.org]

* Fix awkward spacing in gemspec file (closes #3888) [grant@antiflux.org]

* Add support for :sudo variable to specify path to sudo (closes #4578) [timothee.peignier@tryphon.org]

* Make previous_release return nil if there are no previous releases (closes #4959) [bdabney@cavoksolutions.com]

* Uncache releases list after update_code is called so that newly released dir is included (closes #3766) [Jamis Buck]

* Allow the subversion scm to accept HTTPS certificates (closes #4792) [Jamis Buck]

* Make sure rollbacks occur within the scope of the task that triggered them [Jamis Buck]

* Fixed the default recipe to work with setups that haven't yet gone pids [DHH]

* Symlink and setup for shared/pids to tmp/pids [DHH]

* Fix some incorrect usage text (closes #4507) [gerry_shaw@yahoo.com]

* Added Actor#stream method that makes it easy to create cross-server streams [DHH]. Example:

    desc "Run a tail on multiple log files at the same time"
    task :tail_fcgi, :roles => :app do
      stream "tail -f #{shared_path}/log/fastcgi.crash.log"
    end

* Make update_code and symlink a macro task under the name "update" for easy of deploy to servers that does not run fcgis [DHH]
